--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"dev": "gulp",
 		"build": "set NODE_ENV=prod && gulp build",
 		"preview": "gulp preview"
+	},
+	"dependencies": {
+		"yarn": "^1.22.22"
 	}
 }
